[package]
name = "logio"
version = "0.1.0"
edition = "2024"
authors = ["aarongraybill3@gmail.com"]
description = "library for logging all things stdio"
license = "MIT OR Apache-2.0"
keywords = ["log", "logging", "io"]
homepage = "https://github.com/y0Phoenix/logio"
repository = "https://github.com/y0Phoenix/logio.git"
readme = "README.md"


[dependencies]
chrono = "0.4.41"

[lib]
path = "src/lib.rs"
